# options-testing

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: covered_call_default.yaml  pmcc_default.yaml
src/: main.py
src/analytics/: __init__.py  metrics.py
src/data/: __init__.py  csv_uploader.py  queries.py  sample_data.py  schema.py  storage.py  validation.py
src/engine/: __init__.py  backtest.py  logger.py  margin.py
src/strategies/: __init__.py  base.py  covered_call.py  pmcc.py
tests/: test_core.py
